[tool.poetry]
name = "docs-src"
version = "0.1.0"
description = "Sphinx code for documentation of ALTS project"
authors = ["Benjamin Gors <benjamin.gorskis@gmail.com>"]
readme = "README.md"
packages = [
    { include = "alts/core", from = "../code-src/alts-core" },
    { include = "alts/modules", from = "../code-src/alts-modules" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
plugins = "numpy.typing.mypy_plugin"
